--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,41 @@
     <title>Hello, World! - A-Frame</title>
     <meta name="description" content="Hello, World! - A-Frame">
     <script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
+    <script>
+      AFRAME.registerComponent('scale-on-mouseenter', {
+        schema: {
+          to: {default: '2.5 2.5 2.5'},
+          standard :{default: '1 1 1'}
+        },
+        init: function () {
+          var data = this.data;
+          this.el.addEventListener('mouseenter', function () {
+            this.setAttribute('scale', data.to);
+          });
+          this.el.addEventListener('mouseleave', function () {
+            this.setAttribute('scale', data.standard);
+          });
+        }
+      });
+    </script>
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/base.css" media="screen" />
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-cylinder position="2 5 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+    <a-assets>
+    <video id="antarctica" autoplay loop="true" src="assets/video/env.mp4">
+  </a-assets>
+  <!-- Using the asset management system. -->
+  <a-videosphere src="#antarctica"></a-videosphere>
+      <a-cylinder color="crimson" height="0.125" radius="0.5" position="1.24 2.63 -2.76" material="color:crimson;flatShading:true;roughness:0.56" geometry="primitive:cylinder;height:0.13;radius:0.5" rotation="89.95 -179.91 0"scale-on-mouseenter="to: 2.2 2.2 2.2"><a-animation attribute="position" from="1.24 2.63 -2.76" to="-1.24 2.63 -2.76" delay="1000" repeat="indefinite" direction="alternate" ease="ease-in-out"></a-animation></a-cylinder>
       <a-cylinder position="2 5 5" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#000000"></a-sky>
       <a-entity position="0 1.87 0" light="color:#ffeb1e;type:point"></a-entity>
+      <a-camera>
+        <a-cursor></a-cursor>
+      </a-camera>
     </a-scene>
     
   </body>
 </html>
+ 
