--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
+    <a-entity gltf-model="assets/models/damagedHelmet/damagedHelmet.gltf" id="helmet" rotation="90 180 0" position="0 0.7555334350887604 0"></a-entity>
   </a-scene>
   <script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.4'><\/script>".replace("HOST", location.hostname));
