--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
     <a-entity gltf-model="assets/models/damagedHelmet/damagedHelmet.gltf" id="helmet" rotation="90 180 0" position="0 0.7555334350887604 0"></a-entity>
+    <a-entity light="intensity:0.6;castShadow:true" position="-0.5 4.411734519160507 -0.31257176476268156" data-aframe-default-light="" aframe-injected=""></a-entity>
   </a-scene>
   <script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.4'><\/script>".replace("HOST", location.hostname));
